* Fri Sep 13 2024 Steven Pritchard <steve@sicura.us> - 6.10.0
- [puppetsync] Update module dependencies to support simp-iptables 7.x

* Mon Oct 23 2023 Steven Pritchard <steve@sicura.us> - 6.9.0
- [puppetsync] Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 6.8.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Tue Sep 26 2023 Steven Pritchard <steve@sicura.us> - 6.7.0
- Add AlmaLinux 8 support

* Tue Aug 29 2023 Steven Pritchard <steve@sicura.us> - 6.6.0
- Support for Puppet 8 and stdlib 9
- Drop use of Stdlib::Compat::Integer type
- Drop use of deprecated top-level facts
- Update gem dependencies
- Drop support for Puppet 6
- Drop use of explicit top-scoping

* Mon Jul 10 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.5.0
- Add RockyLinux 8 support

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.4.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.3.1
- Removed EL6 support

* Tue Dec 10 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.3.0-0
- Add EL8 support

* Tue Aug 13 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.1-0
- Allow users to force enabling/disabling of the chroot settings
- Allow users to easily set the 'named_write_master_zones' SELinux boolean in
  case they need to support dynamic DNS or zone transfers.
- Added REFERENCE.md

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.1-0
- Support puppetlabs/concat 6.x.

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> -6.2.0-0
- Add v2 compliance_markup data

* Mon Apr 01 2019 Jim Anderson <thesemicolons@protonmail.com> - 6.1.2-0
- Moved code for setting chroot directory from manifests/params.pp into data in
  modules
