@@ -1,3 +1,8 @@
+* Thu May 08 2025 Richard Gardner <rick@sicura-us> - 7.0.0
+- Remove EOL OS's support (EL7, CentOS8)
+- Stardardize beaker nodesets
+- beaker test improvements
+
 * Fri Sep 13 2024 Steven Pritchard <steve@sicura.us> - 6.10.0
 - [puppetsync] Update module dependencies to support simp-iptables 7.x
 
